# reddit_emerald

./: README.md  db.sqlite3  pyproject.toml
Authentication/: forms.py  views.py
Authentication/templates/: user_not_found.html
Main/: admin.py  forms.py  mod_helper.py  models.py  views.py
Main/migrations/: 0001_initial.py
Main/static/Main/: style.css
Main/templates/: all.html  allSubreddits.html  index.html  moderator_view.html
Post/: admin.py  forms.py  models.py  views.py
Post/migrations/: 0001_initial.py  0002_auto_20201006_1433.py  0003_auto_20201015_1809.py  0004_auto_20201015_2106.py  0005_auto_20201015_2247.py
Post/static/Post/: style.css
Post/templates/: all.html  comment_detail.html  post_detail.html  user.html
User/: admin.py  models.py  views.py
User/migrations/: 0001_initial.py  0002_auto_20201015_1809.py
User/templates/: user.html
reddit/: settings.py  urls.py
templates/: generic_form.html
